--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 <body>
     <!-- header section starts -->
     <header class="">
-        <a href="#" class="logo"><img src="images/logo.png" alt=""></a>
+        <a href="#" class="logo"><img src="images/logo 2.png" alt="">
+
+        </a>
         <nav class="navbar">
             <a href="#">Home</a>
             <a href="#">Store</a>
@@ -35,6 +37,7 @@
         <div class="icons">
             <i class="fas fa-bars" id="menu-btn"></i>
             <i class="fas fa-search" id="search-btn"></i>
+            <i class="fas fa-question-circle" id="question-btn"></i>
             <i class="fas fa-shopping-bag" id="shopping-btn"></i>
             <!-- <i class="fas fa-user" id="user-btn"></i> -->
         </div>
